--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsnd src/chatbot.ts"
+    "start": "tsnd src/chatbot.js"
   },
   "author": "",
   "license": "ISC",
