--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
+    "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.18.2"
+    "uuid": "^9.0.0",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#fix-buttons-list"
   },
   "devDependencies": {
+    "@types/qrcode-terminal": "^0.12.0",
     "ts-node-dev": "2.0.0",
     "typescript": "^4.8.4"
   }
